# oi

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md  justfile
.github/workflows/: ci.yml  docs.yml
examples/: boxes.oi  dimensions.oi  errors.oi  fn.oi  grades.oi  hello.oi  main.oi  points.oi  ranges.oi  shapes.oi  tiny.oi  users.oi
ref/: Oi.md  archive.md  syntax.md
src/: ast.rs  cli.rs  compiler.rs  diagnostics.rs  lexer.rs  lib.rs  main.rs  parser.rs  runtime.rs
src/commands/: exec.rs  mod.rs  repl.rs
src/compiler/: lower.rs  mod.rs
src/compiler/lower/: anon.rs  builtin.rs  call.rs  control.rs  core.rs  expr.rs  generic.rs  helpers.rs  mod.rs  op.rs  print.rs  stmt.rs  value.rs
tests/: run.rs
tests/cli/: exec.rs  run.rs
tests/compiler/: anon_fn.rs  arithmetic.rs  arrays.rs  comments.rs  diagnostics.rs  dollar.rs  functions.rs  helpers.rs  io.rs  loops.rs  main.rs  methods.rs  numbers.rs  pipelines.rs  statements.rs  strings.rs  structs.rs  tuples.rs  types.rs  unit.rs  vars.rs
tests/compiler/control/: match_.rs  mod.rs  propagators.rs
tests/compiler/types/: arrays.rs  enums.rs  maps.rs  mod.rs  options.rs  results.rs  strings.rs  structs.rs
tests/compiler/types/generics/: structs.rs
www/: config.toml
www/content/: _index.md  about.md  features.md
